css/style.css
/* ... */
/* Gaya untuk konten popup */
.popup-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 9rem;
  margin: 5rem auto;
}
.popup-content {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  overflow: hidden;
}

.popup-content .example1 {
  font-size: 2em;
  color: var(--bg);
  text-shadow: 1px 1px 3px rgba(58, 79, 71, 0.8);
  font-weight: normal;
  text-transform: uppercase;
  margin-bottom: 3rem;
}

.popup-content h1 {
  font-size: 5em;
  font-weight: 700;
  color: var(--bg);
  text-shadow: 1px 1px 3px rgba(58, 79, 71, 0.8);
  text-transform: uppercase;
  font-family: analogue, Sans-Serif;
  margin-bottom: 3rem;
  letter-spacing: 2px;
}
.popup-content h4 {
  font-size: 1.5em;
  font-weight: normal;
  color: var(--bg);
  text-shadow: 1px 1px 3px rgba(58, 79, 71, 0.9);
  font-family: var(--poppins), Sans-Serif;
  margin-bottom: 3rem;
  text-transform: capitalize;
  letter-spacing: 1px;
}
.popup-content h1 span {
  color: var(--dark-main-color);
}

/* Gaya untuk tombol tutup */
.close {
  display: inline-block;
  padding: 0.8rem 1.5rem;
  color: #fff;
  font-size: 2rem;
  font-weight: 400;
  text-align: center;
  background-color: var(--dark-main-color);
  box-shadow: 1px 1px 3px rgba(58, 79, 71, 0.8);
  cursor: pointer;
}

/* my logo */
#logo {
  width: 40px;
  height: 40px;
  font-size: 4rem;
  position: fixed;
  bottom: 4rem;
  right: 2rem;
  cursor: pointer;
  /* z-index: 99; */
  animation: logoAnimation 4s linear infinite;
  transform-origin: center;
  display: flex;
  justify-content: center;
  align-items: center;
  line-height: 0;
}

#logo img {
  width: 50px; /* Sesuaikan dengan ukuran logo Anda */
  border-radius: 50%;
  cursor: pointer;
}

@keyframes logoAnimation {
  form {
    transform: rotate(0);
  }
  to {
    transform: rotate(360deg);
  }
}

/* Hero Section */
.hero {
  min-height: 100vh;
  display: flex;
  align-items: flex-end;
  align-content: flex-end;
  position: relative;
  overflow: hidden;
}

.slider {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.slider::after {
  content: " ";
  display: block;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(to bottom, rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.5));
  position: absolute;
  bottom: 0;
}

.slide {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 50% 20%;
  aspect-ratio: 3/2;
  opacity: 0;
  transition: opacity 2s ease;
}

.slide.active {
  opacity: 1;
}

.hero .content {
  padding-top: 10rem;
  margin: 5rem auto;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  z-index: 1;
}

.hero .content h4 {
  font-size: 2em;
  color: var(--bg);
  text-shadow: 1px 1px 3px rgba(58, 79, 71, 0.8);
  text-transform: uppercase;
  margin: 1.5rem 0;
  font-weight: normal;
  letter-spacing: 1px;
}
.hero .content h4 span {
  font-style: italic;
  font-weight: 700;
}

.hero .content h1 {
  font-size: 4em;
  color: var(--bg);
  text-shadow: 1px 1px 3px rgba(58, 79, 71, 0.8);
  text-transform: uppercase;
  font-family: analogue, sans-serif;
  letter-spacing: 1px;
}

.hero .content h1 span {
  color: var(--dark-main-color);
}

.hero .content button {
  font-size: 1.5em;
  color: var(--bg);
  text-shadow: 1px 1px 3px rgba(58, 79, 71, 0.8);
  font-weight: 600;
  margin-top: 1.5rem;
  letter-spacing: 3px;
}
.hero .content button span {
  font-weight: 500;
}

.hero .content .countdown {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.hero .content .countdown .waktu {
  margin: 5rem 1.7rem;
  font-size: 2rem;
  color: var(--bg);
  font-family: "Poppins", Sans-serif;
  font-weight: normal;
  text-shadow: 1px 1px 3px rgba(58, 79, 71, 0.8);
}

.hero .content .countdown .waktu p {
  font-size: 0.8em;
}

/* quran */
.quran {
  padding: 7rem 7% 1.4rem;
  /* background-color: #fff; */
}

.quran .row {
  display: flex;
}
.quran .row .quran-img {
  flex: 1 1 45rem;
}

.quran .row .quran-img img {
  width: 100%;
}

.quran .row .content {
  flex: 1 1 35rem;
  padding: 5rem 2rem;
}
.quran .row .content h3 {
  font-size: 4rem;
  margin-bottom: 1rem;
  color: var(--dark-main-color);
  font-weight: 700;
  font-style: italic;
  font-family: power, sans-serif;
}
.quran .row .content p {
  font-size: 1.8rem;
  margin-bottom: 0.8rem;
  color: var(--dark-100);
  font-family: "Poppins", Sans-serif;
  font-weight: normal;
  font-style: italic;
}
/* about */
.about {
  padding: 7rem 7% 1.4rem;
  background-image: linear-gradient(to top, rgb(240, 239, 239), rgba(245, 173, 173, 0.5));
}

.hero-img {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: -1; /* Ensure the hero image is behind other content */
  /* border-radius: 40px 40px 0 0; */
}

.hero-img::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--light-main-color);
  opacity: 0.7;
}

.hero-img img {
  width: 100%;
  height: 100%;
  object-fit: cover; /* This ensures the image covers the whole hero section */
  object-position: center;
  /* border-radius: 40px 40px 0 0; */
}

.about .row {
  display: flex;
}
.about .row .about-img {
  flex: 1 1 45rem;
}

.about .row .about-img img {
  width: 80%;
  height: 75%;
  object-fit: cover;
  object-position: center;
  aspect-ratio: 2/3;
  box-shadow: 1rem 1rem 3rem rgba(58, 79, 71, 0.8);
}

.about .row .content {
  flex: 1 1 35rem;
  padding: 10rem 2rem;
}
.about .row .content h3 {
  font-size: 4rem;
  margin-bottom: 1rem;
  font-family: analogue, sans-serif;
  font-weight: normal;
  /* text-transform: uppercase; */
  letter-spacing: 1px;
  color: var(--dark-main-color);

}
.about .row .content p {
  font-size: 2rem;
  margin: 0;
  font-family: var(--poppins);
  font-weight: 600;
    color: var(--dark-100);


}
/* ... */

